--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
     "extends": "./node_modules/pcf-scripts/tsconfig_base.json",
     "compilerOptions": {
-        "typeRoots": ["node_modules/@types"],
+        "typeRoots": ["node_modules/@types"]
     },
     "types": [
         "babylonjs",
         "babylonjs-loaders",
-        ""
     ]
 }
